--- a/src/shared/ShaiebLibrary.Shared.Application/ShaiebLibrary.Shared.Application.csproj
+++ b/src/shared/ShaiebLibrary.Shared.Application/ShaiebLibrary.Shared.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShaiebLibrary.Shared.Domain\ShaiebLibrary.Shared.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
