--- a/src/shared/ShaiebLibrary.Shared.Infrastructure/ShaiebLibrary.Shared.Infrastructure.csproj
+++ b/src/shared/ShaiebLibrary.Shared.Infrastructure/ShaiebLibrary.Shared.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShaiebLibrary.Shared.Domain\ShaiebLibrary.Shared.Domain.csproj" />
+    <ProjectReference Include="..\ShaiebLibrary.Shared.Application\ShaiebLibrary.Shared.Application.csproj" />
+  </ItemGroup>
+
 </Project>
