--- a/src/services/book-catalog/ShaiebLibrary.BookCatalog.API/ShaiebLibrary.BookCatalog.API.csproj
+++ b/src/services/book-catalog/ShaiebLibrary.BookCatalog.API/ShaiebLibrary.BookCatalog.API.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Application\ShaiebLibrary.BookCatalog.Application.csproj" />
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Infrastructure\ShaiebLibrary.BookCatalog.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
