--- a/src/services/book-catalog/ShaiebLibrary.BookCatalog.Infrastructure/ShaiebLibrary.BookCatalog.Infrastructure.csproj
+++ b/src/services/book-catalog/ShaiebLibrary.BookCatalog.Infrastructure/ShaiebLibrary.BookCatalog.Infrastructure.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Domain\ShaiebLibrary.BookCatalog.Domain.csproj" />
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Application\ShaiebLibrary.BookCatalog.Application.csproj" />
+    <ProjectReference Include="..\..\..\shared\ShaiebLibrary.Shared.Infrastructure\ShaiebLibrary.Shared.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
