--- a/src/services/book-catalog/ShaiebLibrary.BookCatalog.API/appsettings.json
+++ b/src/services/book-catalog/ShaiebLibrary.BookCatalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShaiebLibrary.BookCatalog;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=ShaiebLibrary.BookCatalog;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
