--- a/src/services/book-catalog/ShaiebLibrary.BookCatalog.Tests/ShaiebLibrary.BookCatalog.Tests.csproj
+++ b/src/services/book-catalog/ShaiebLibrary.BookCatalog.Tests/ShaiebLibrary.BookCatalog.Tests.csproj
@@ -8,14 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="FluentAssertions" Version="8.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Domain\ShaiebLibrary.BookCatalog.Domain.csproj" />
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Application\ShaiebLibrary.BookCatalog.Application.csproj" />
+    <ProjectReference Include="..\ShaiebLibrary.BookCatalog.Infrastructure\ShaiebLibrary.BookCatalog.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
